fix: improve `color` contrast for dark theme button (#2420)

--- a/packages/ui-core/src/modal/Close/index.module.scss
+++ b/packages/ui-core/src/modal/Close/index.module.scss
@@ -7,7 +7,7 @@
   top: 1.5rem;
   z-index: 2;
   > button {
-    opacity: 0.4;
+    opacity: 0.6;
     transition: opacity var(--transition-duration) ease-in-out;
     &:hover {
       opacity: 1;
